remove gap and fix image size on search results page

--- a/css/styles.css
+++ b/css/styles.css
@@ -486,13 +486,14 @@
 }
 
 .main-block input {
-	background-color: lightgray;
-	margin-top: 23px;
-	margin-bottom: 15px;
-	height: 26%;
-	padding-bottom: 1%;
-	color: black;
-	display: inline-flex;
+    background-color: #D9D9D9;
+    width: 212px;
+    height: 40px;
+    line-height: 35px;
+    font-weight: bold;
+    position: relative;
+    bottom: 10px;
+    text-align: center;
 }
 
 .main-block img {
@@ -516,7 +517,7 @@
 .paragraph {
 	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 	text-align: left;
-	font-size: 16	px;
+	font-size: 16px;
 	word-wrap: break-word;
 	line-height: 180%;
 }
@@ -558,29 +559,22 @@
 
 .pros2 {
 	display: flex;
-	margin: 10%;
+	margin-left: 10%;
 }
 
 .pros img, .pros2 img {
-	height: 151px;
-	width: 151px;
+	height: 300px;
+	width: 300px;
+	padding-bottom: 43%;
 }
 
 .pro-company {
 	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     text-align: left;
-    font-size: 14px;
-    line-height: 17px;
+    font-size: 16px;
+    line-height: 180%;
     word-wrap: break-word;
-}
-
-.pro-email, .pro-email a {
-	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-    text-align: left;
-    font-size: 14px;
-    line-height: 17px;
-    word-wrap: break-word;
-    color: #0000FF;
+    padding-left: 11%
 }
 
 .pro-name, .pro-name a {
@@ -590,6 +584,7 @@
     font-size: 25px;
     word-wrap: break-word;
     text-decoration: none;
+    padding-left: 5%
 }
 
 .pro-name a:clicked, .pro-email a:clicked {
@@ -665,7 +660,7 @@
 	padding-left: 35%;
 	padding-right: 35%;
 	height: 24%;
-	width: 33%;
+	width: 27%;
 }
 
 .sponsers {
@@ -761,7 +756,6 @@ ul {
 		margin-right: 0px;
 		margin-left: 0px;
 	}
-
 
 	.main-block img {
 		width: 7%;
